Fix/scrollable table and not page (#13)
* Change package version

* Small margin between month dropdown and table

* Replace margins along sections with flex and gap

* Correct comp name

* Sticky table header, eliminate page scrollbar and add it inside table

* Remove gap from main

* Removal of margins

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@ body {
     @apply text-2xl;
   }
   h3 {
-    @apply mx-0 mb-3 mt-4 border-[0] border-b border-solid border-[#bbb] pb-[10px];
+    @apply mx-0 my-2 border-[0] border-b border-solid border-[#bbb];
   }
 
   h4 {
